Fix: On small screens, in the Spaces page, for spaces not having an i… (#6808)
* Fix: On small screens, in the Spaces page, for spaces not having an image, the acronym text is not vertically centered

* Added PR number

--- a/static/less/mobile.less
+++ b/static/less/mobile.less
@@ -126,10 +126,6 @@
 
 
         // Space
-        .space-acronym {
-            padding: 6px 0 !important;
-        }
-
         .panel-profile .panel-profile-header .img-profile-header-background {
             min-height: 80px !important;
         }
